Some UI improvements, README update, pom information updates